# pvsamlab

./: .gitignore  AUDIT.md  BESS_DESIGN.md  PROGRESS.md  README.md  df.csv  pyproject.toml  requirements.txt  string_sizing_results.csv
.claude/: settings.json  settings.local.json
data/: untitled_pvsamv1.json
data/inverters/: Sungrow_SG4400UD-MV-US_20230817_V14_PVsyst.6.8.6（New Version).OND
examples/: CONTRIBUTING.md  PySAM Inverter.txt  PySAM Losses.txt  bess_sandbox.ipynb  bess_sandbox_executed.ipynb  bess_surplus_optimization.ipynb  inputs_sample.json  pv_bess_dispatch_analysis.ipynb  pv_bess_sizing_study.ipynb  pv_bess_sizing_study_results.csv  pv_bess_sizing_worker.py  run_dispatch_analysis.py  run_pysam.py  run_sizing_study.py  run_surplus_analysis.py  sandbox_pvsamlab.ipynb  sandbox_pysam.ipynb
examples/bess_dispatch_analysis/: README.md  pv_bess_dispatch_analysis.ipynb  run_dispatch_analysis.py
examples/bess_sandbox/: README.md  bess_sandbox_executed.ipynb
examples/bess_sizing_study/: README.md  pv_bess_sizing_study.ipynb  pv_bess_sizing_worker.py  run_sizing_study.py
examples/bess_surplus/: README.md  bess_surplus_optimization.ipynb  bess_surplus_worker.py  run_surplus_analysis.py
examples/sandbox/: sandbox_pvsamlab.ipynb  sandbox_pysam.ipynb
examples/string_sizing/: README.md  log.txt  parallel_string_sizing.py  pivot_summary_by_module.csv  string_sizing.ipynb  (+2 more)
pvsamlab/: __init__.py  battery.py  climate.py  components.py  core.py  financial.py  model.py  models.py  modules.py  system.py  utils.py
pvsamlab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
(+47 files in other folders)
