[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pvsamlab"
version = "0.1.0"
description = "A Python library for PV plant energy prediction using PySAM"
authors = [{ name = "Your Name", email = "ihorkoshkin@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "NREL-PySAM",
]
