[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pvsamlab"
version = "0.1.0"
description = "A Python library for PV plant energy prediction using PySAM"
authors = [{ name = "Your Name", email = "ihorkoshkin@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "NREL-PySAM>=6.0.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pvlib>=0.10",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "tqdm",
]
