[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pvsamlab"
version = "0.1.0"
description = "A Python library for PV plant energy prediction using PySAM"
authors = [{ name = "Your Name", email = "ihorkoshkin@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "NREL-PySAM>=4.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pvlib>=0.10",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.0",
]
